alpm-types/src/snapshots/openpgp::invalid_packager@case_2_no_name_and_address_not_wrapped.snap
---
source: alpm-types/src/openpgp.rs
---
Parser failed with the following error:
error: invalid packager
 | 
 | foobar@mcfooface.org
 | ~~~~~~~~~~~~~~~~~~~~^ expected opening delimiter '<' for email address
 | 
 = while parsing:
   alpm packager: (foobar@mcfooface.org)
   → invalid packager
   → expected opening delimiter '<' for email address
